v10/docs/ModelsCertificateRetrievalResponseDetailedKeyUsageModel.md
# ModelsCertificateRetrievalResponseDetailedKeyUsageModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CrlSign** | Pointer to **bool** |  | [optional] 
**DataEncipherment** | Pointer to **bool** |  | [optional] 
**DecipherOnly** | Pointer to **bool** |  | [optional] 
**DigitalSignature** | Pointer to **bool** |  | [optional] 
**EncipherOnly** | Pointer to **bool** |  | [optional] 
**KeyAgreement** | Pointer to **bool** |  | [optional] 
**KeyCertSign** | Pointer to **bool** |  | [optional] 
**KeyEncipherment** | Pointer to **bool** |  | [optional] 
**NonRepudiation** | Pointer to **bool** |  | [optional] 
**HexCode** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseDetailedKeyUsageModel

`func NewModelsCertificateRetrievalResponseDetailedKeyUsageModel() *ModelsCertificateRetrievalResponseDetailedKeyUsageModel`

NewModelsCertificateRetrievalResponseDetailedKeyUsageModel instantiates a new ModelsCertificateRetrievalResponseDetailedKeyUsageModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseDetailedKeyUsageModelWithDefaults

`func NewModelsCertificateRetrievalResponseDetailedKeyUsageModelWithDefaults() *ModelsCertificateRetrievalResponseDetailedKeyUsageModel`

NewModelsCertificateRetrievalResponseDetailedKeyUsageModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseDetailedKeyUsageModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCrlSign

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetCrlSign() bool`

GetCrlSign returns the CrlSign field if non-nil, zero value otherwise.

### GetCrlSignOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetCrlSignOk() (*bool, bool)`

GetCrlSignOk returns a tuple with the CrlSign field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCrlSign

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetCrlSign(v bool)`

SetCrlSign sets CrlSign field to given value.

### HasCrlSign

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasCrlSign() bool`

HasCrlSign returns a boolean if a field has been set.

### GetDataEncipherment

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetDataEncipherment() bool`

GetDataEncipherment returns the DataEncipherment field if non-nil, zero value otherwise.

### GetDataEnciphermentOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetDataEnciphermentOk() (*bool, bool)`

GetDataEnciphermentOk returns a tuple with the DataEncipherment field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDataEncipherment

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetDataEncipherment(v bool)`

SetDataEncipherment sets DataEncipherment field to given value.

### HasDataEncipherment

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasDataEncipherment() bool`

HasDataEncipherment returns a boolean if a field has been set.

### GetDecipherOnly

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetDecipherOnly() bool`

GetDecipherOnly returns the DecipherOnly field if non-nil, zero value otherwise.

### GetDecipherOnlyOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetDecipherOnlyOk() (*bool, bool)`

GetDecipherOnlyOk returns a tuple with the DecipherOnly field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDecipherOnly

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetDecipherOnly(v bool)`

SetDecipherOnly sets DecipherOnly field to given value.

### HasDecipherOnly

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasDecipherOnly() bool`

HasDecipherOnly returns a boolean if a field has been set.

### GetDigitalSignature

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetDigitalSignature() bool`

GetDigitalSignature returns the DigitalSignature field if non-nil, zero value otherwise.

### GetDigitalSignatureOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetDigitalSignatureOk() (*bool, bool)`

GetDigitalSignatureOk returns a tuple with the DigitalSignature field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDigitalSignature

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetDigitalSignature(v bool)`

SetDigitalSignature sets DigitalSignature field to given value.

### HasDigitalSignature

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasDigitalSignature() bool`

HasDigitalSignature returns a boolean if a field has been set.

### GetEncipherOnly

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetEncipherOnly() bool`

GetEncipherOnly returns the EncipherOnly field if non-nil, zero value otherwise.

### GetEncipherOnlyOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetEncipherOnlyOk() (*bool, bool)`

GetEncipherOnlyOk returns a tuple with the EncipherOnly field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetEncipherOnly

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetEncipherOnly(v bool)`

SetEncipherOnly sets EncipherOnly field to given value.

### HasEncipherOnly

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasEncipherOnly() bool`

HasEncipherOnly returns a boolean if a field has been set.

### GetKeyAgreement

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetKeyAgreement() bool`

GetKeyAgreement returns the KeyAgreement field if non-nil, zero value otherwise.

### GetKeyAgreementOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetKeyAgreementOk() (*bool, bool)`

GetKeyAgreementOk returns a tuple with the KeyAgreement field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetKeyAgreement

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetKeyAgreement(v bool)`

SetKeyAgreement sets KeyAgreement field to given value.

### HasKeyAgreement

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasKeyAgreement() bool`

HasKeyAgreement returns a boolean if a field has been set.

### GetKeyCertSign

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetKeyCertSign() bool`

GetKeyCertSign returns the KeyCertSign field if non-nil, zero value otherwise.

### GetKeyCertSignOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetKeyCertSignOk() (*bool, bool)`

GetKeyCertSignOk returns a tuple with the KeyCertSign field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetKeyCertSign

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetKeyCertSign(v bool)`

SetKeyCertSign sets KeyCertSign field to given value.

### HasKeyCertSign

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasKeyCertSign() bool`

HasKeyCertSign returns a boolean if a field has been set.

### GetKeyEncipherment

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetKeyEncipherment() bool`

GetKeyEncipherment returns the KeyEncipherment field if non-nil, zero value otherwise.

### GetKeyEnciphermentOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetKeyEnciphermentOk() (*bool, bool)`

GetKeyEnciphermentOk returns a tuple with the KeyEncipherment field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetKeyEncipherment

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetKeyEncipherment(v bool)`

SetKeyEncipherment sets KeyEncipherment field to given value.

### HasKeyEncipherment

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasKeyEncipherment() bool`

HasKeyEncipherment returns a boolean if a field has been set.

### GetNonRepudiation

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetNonRepudiation() bool`

GetNonRepudiation returns the NonRepudiation field if non-nil, zero value otherwise.

### GetNonRepudiationOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetNonRepudiationOk() (*bool, bool)`

GetNonRepudiationOk returns a tuple with the NonRepudiation field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetNonRepudiation

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetNonRepudiation(v bool)`

SetNonRepudiation sets NonRepudiation field to given value.

### HasNonRepudiation

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasNonRepudiation() bool`

HasNonRepudiation returns a boolean if a field has been set.

### GetHexCode

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetHexCode() string`

GetHexCode returns the HexCode field if non-nil, zero value otherwise.

### GetHexCodeOk

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) GetHexCodeOk() (*string, bool)`

GetHexCodeOk returns a tuple with the HexCode field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetHexCode

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) SetHexCode(v string)`

SetHexCode sets HexCode field to given value.

### HasHexCode

`func (o *ModelsCertificateRetrievalResponseDetailedKeyUsageModel) HasHexCode() bool`

HasHexCode returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


